# checksysvers

./: LICENSE  MANIFEST.in  README.md  checksysvers.py  pyproject.toml  requirements.txt  setup.py
checksysvers/: __init__.py  cli.py  local_checker.py  remote_checker.py
tests/: test_checksysvers.py
