[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checksysvers"
version = "0.1.0"
description = "A Python package to check operating system versions across different platforms"
readme = "README.md"
authors = [
    {name = "Jeremie Rouzet", email = "jeremie@jeyriku.net"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
]
keywords = ["system", "version", "os", "network", "cisco", "juniper", "monitoring"]

dependencies = []

[project.optional-dependencies]
remote = [
    "httpx>=0.24.0",
    "infrahub>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
full = [
    "httpx>=0.24.0",
    "infrahub>=0.1.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jeyriku/checksysvers"
Repository = "https://github.com/jeyriku/checksysvers"
Issues = "https://github.com/jeyriku/checksysvers/issues"

[project.scripts]
checksysvers = "checksysvers.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["checksysvers*"]
exclude = ["tests*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
